--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,9 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/underscore/underscore-min.js"></script>
     <!-- your scripts -->
+
     <script src="env/config.js"></script>
     <script src="scripts/app.js"></script>
   </head>
@@ -15,6 +17,7 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <div class="messages"></div>
     </div>
   </body>
 </html>
