messages&usernames escaped, post implemented, pull most recent

--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,13 @@
     <script src="scripts/app.js"></script>
   </head>
   <body>
+  <!-- <script>document.body.style.backgroundImage="url('http://i255.photobucket.com/albums/hh156/SrPato/Stuff/ugly2.jpg')";</script> -->
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <input type="text" class="input"></input>
+      <button class="postButton">Post!</button>
+
       <div class="messages"></div>
     </div>
   </body>
