room buttons and post selector added - need to stop/start intervals

--- a/client/index.html
+++ b/client/index.html
@@ -17,10 +17,16 @@
   <!-- <script>document.body.style.backgroundImage="url('http://i255.photobucket.com/albums/hh156/SrPato/Stuff/ugly2.jpg')";</script> -->
     <div id="main">
       <h1>chatterbox</h1>
+      <div class='roomNav'>
+        <button class="roomButton">ALL CHATS</button>
+      </div>
+      </br>
       <!-- Your HTML goes here! -->
+      Post in: <select class="roomSelect"></select>
+      </br>
       <input type="text" class="input"></input>
       <button class="postButton">Post!</button>
-
+      </br></br>
       <div class="messages"></div>
     </div>
   </body>
